terraform+eksctl+fargate+ingress/single-alb-ingress-with-different-namespaces+-fargateprofiles/apps/app2-fargate-profiles-ns-cloudgeeks-app2/2-deployment-+-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloudgeeks-app2-deployment
  labels:
    app: cloudgeeks-app2
  namespace: cloudgeeks-app2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cloudgeeks-app2
  template:
    metadata:
      labels:
        app: cloudgeeks-app2
    spec:
      containers:
        - name: cloudgeeks-app2
          image: quickbooks2018/path-green:latest
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "128Mi"
              cpu: "500m"
            limits:
              memory: "500Mi"
              cpu: "1000m"                         
---
apiVersion: v1
kind: Service
metadata:
  name: cloudgeeks-app2-nodeport-service
  labels:
    app: cloudgeeks-app2
  namespace: cloudgeeks-app2
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /green/index.html
    # For Fargate
    alb.ingress.kubernetes.io/target-type: ip        
spec:
  type: NodePort
  selector:
    app: cloudgeeks-app2
  ports:
    - port: 80
      targetPort: 80
